--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.548.0",
