--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "gsap": "^3.13.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.548.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.0"
   },
